<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_money_receiver"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_money_receiver" />
    </group>

    <item android:title="Pictures">
        <menu>
            <item
                android:id="@+id/navGallery"
                android:icon="@drawable/ic_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/navSlideshow"
                android:icon="@drawable/ic_slideshow"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>

</menu>
